--- a/HomePage/angular.json
+++ b/HomePage/angular.json
@@ -27,7 +27,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": [
                "node_modules/bootstrap/dist/js/bootstrap.min.js"
